--- a/mysite/myapp/templates/myapp/clasicos.html
+++ b/mysite/myapp/templates/myapp/clasicos.html
@@ -62,6 +62,16 @@
             background-color: #e55;
         }
 
+        .login {
+            background-color: #f60;
+            padding: 5px 10px;
+            border-radius: 4px;
+        }
+
+        .login:hover {
+            background-color: #e55;
+        }
+
         .menu-toggle {
             display: none;
             flex-direction: column;
@@ -109,7 +119,7 @@
             padding: 10px;
         }
 
-        .menu-responsive .registro {
+        .menu-responsive .registro, .menu-responsive .login {
             margin: 10px auto;
         }
 
@@ -165,22 +175,24 @@
         </div>
         <nav class="menu">
             <ul>
-                    <li><a href={% url 'home' %}>Inicio</a></li>
-                    <li><a href={% url 'generos' %}>Géneros</a></li>
-                    <li><a href={% url 'estrenos' %}>Estrenos</a></li>
-                    <li><a href={% url 'clasicos' %}>Clásicos</a></li>
-                    <li><a href={% url 'contacto' %}>Contacto</a></li>
-                    <li><a href={% url 'registro' %} class="registro">Registrarse</a></li>
+                <li><a href={% url 'home' %}>Inicio</a></li>
+                <li><a href={% url 'generos' %}>Géneros</a></li>
+                <li><a href={% url 'estrenos' %}>Estrenos</a></li>
+                <li><a href={% url 'clasicos' %}>Clásicos</a></li>
+                <li><a href={% url 'contacto' %}>Contacto</a></li>
+                <li><a href={% url 'registro' %} class="registro">Registrarse</a></li>
+                <li><a href={% url 'login' %} class="login">Iniciar Sesión</a></li>
             </ul>
         </nav>
         <nav class="menu-responsive">
             <ul>
-                    <li><a href={% url 'home' %}>Inicio</a></li>
-                    <li><a href={% url 'generos' %}>Géneros</a></li>
-                    <li><a href={% url 'estrenos' %}>Estrenos</a></li>
-                    <li><a href={% url 'clasicos' %}>Clásicos</a></li>
-                    <li><a href={% url 'contacto' %}>Contacto</a></li>
-                    <li><a href={% url 'registro' %} class="registro">Registrarse</a></li>
+                <li><a href={% url 'home' %}>Inicio</a></li>
+                <li><a href={% url 'generos' %}>Géneros</a></li>
+                <li><a href={% url 'estrenos' %}>Estrenos</a></li>
+                <li><a href={% url 'clasicos' %}>Clásicos</a></li>
+                <li><a href={% url 'contacto' %}>Contacto</a></li>
+                <li><a href={% url 'registro' %} class="registro">Registrarse</a></li>
+                <li><a href={% url 'login' %} class="login">Iniciar Sesión</a></li>
             </ul>
         </nav>
     </header>
@@ -205,7 +217,6 @@
 
     <script>
         function toggleMenu() {
-            const menuToggle = document.querySelector('.menu-toggle');
             const menuResponsive = document.querySelector('.menu-responsive');
             menuResponsive.classList.toggle('active');
         }
